[gd_scene load_steps=11 format=2]

[ext_resource path="res://Enemies/Buzz/buzz.png" type="Texture" id=1]
[ext_resource path="res://Player/StateMachine/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Buzz/Buzz.gd" type="Script" id=3]
[ext_resource path="res://Enemies/Buzz/BuzzStateDefault.gd" type="Script" id=4]
[ext_resource path="res://Enemies/Buzz/BuzzStunned.gd" type="Script" id=5]
[ext_resource path="res://Enemies/Buzz/BuzzStateDying.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28, 28 )

[sub_resource type="Animation" id=2]
resource_name = "buzz_dying"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.501, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 9.8231 ), Vector2( 0, -10.6532 ), Vector2( 0, -16.9774 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.501, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.25, 0.811 ), Vector2( 0.76, 1.205 ), Vector2( 0.6, 1.327 ), Vector2( 1, 1 ) ]
}

[node name="Buzz" type="KinematicBody2D" groups=[
"bounce",
"enemies",
]]
script = ExtResource( 3 )
GRAVITY = 0.0

[node name="Sprite" type="Sprite" parent="."]
rotation = 6.28319
texture = ExtResource( 1 )
offset = Vector2( 4, -12 )
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/buzz_dying = SubResource( 2 )
anims/buzz_idle = SubResource( 3 )
anims/buzz_squish = SubResource( 4 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="StateDefault" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="StateDying" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="StateMachine/StateDying"]

[node name="StateStunned" type="Node" parent="StateMachine"]
script = ExtResource( 5 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="StateMachine/StateDying/Timer" to="." method="queue_free"]
